[package]
name = "libudf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
bitflags = "1.3.2"
bytemuck = "1.12.3"
log = { version = "0.4.17", features = ["std"] }
nom = "7.1.1"
nom-derive = "0.10.0"

[dev-dependencies]
env_logger = "0.9.3"
